--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+
         <link
             rel="icon"
             type="image/svg+xml"
             href="./src/assets/icons/calorific.svg"
         />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="initial-scale=1, width=device-width" />
         <title>Calorific</title>
     </head>
     <body>
